fix title alignment of subobjects

--- a/user/themes/longread/scss/custom.scss
+++ b/user/themes/longread/scss/custom.scss
@@ -804,11 +804,14 @@ form#email-capture {
   .chapter-title {
     margin-top: 50px;
     margin-bottom: 50px;
-    padding: 0 20px;
     h1 {
       color: $text-color;
       font-size: 60px;
       line-height: 60px;
+      padding: 0 40px;
+      @include respond-to(600) {
+        padding: 0 20px;
+      }
       @include respond-to(620) {
         font-size: 40px;
         line-height: 40px;
